# impact_point_estimator

./: CMakeLists.txt  package.xml
include/impact_point_estimator/: filter.hpp  impact_point_estimator.hpp  impact_point_estimator_core.hpp  impact_point_estimator_node.hpp  prediction.hpp  trajectory_filter.hpp  trajectory_predictor.hpp  visibility.h
src/: filter.cpp  impact_point_estimator.cpp  impact_point_estimator_core.cpp  impact_point_estimator_node.cpp  prediction.cpp  trajectory_filter.cpp  trajectory_predictor.cpp
